--- a/Client/hhh-client/src/components/Articles/ArticleCard.module.css
+++ b/Client/hhh-client/src/components/Articles/ArticleCard.module.css
@@ -1,83 +1,96 @@
 .articleCardContainer {
-    outline: 1px solid var(--turquoise);
-    border-radius: 30px;
-    overflow: hidden;
-    color: var(--white);
-    font-family: var(--font-family-paragraph);
-    font-size: var(--font-size-regular);
-    position: relative;
-    width: 85%;
-    margin-bottom: 5rem;
-    display: flex;
-    flex-direction: column;
-    flex:1;
-    max-height: 1000px;
+  outline: 1px solid var(--turquoise);
+  border-radius: 30px;
+  overflow: hidden;
+  color: var(--white);
+  font-family: var(--font-family-paragraph);
+  font-size: var(--font-size-regular);
+  position: relative;
+  width: 85%;
+  margin-bottom: 5rem;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  /* max-height: 1000px; */
 }
 .articleCardContainer:hover {
-    animation-name: articleCardHover;
-    animation-duration: 0.25s;
-    animation-fill-mode: forwards;
+  animation-name: articleCardHover;
+  animation-duration: 0.25s;
+  animation-fill-mode: forwards;
 }
 
 a {
-    cursor: pointer;
-    text-decoration: none;
-    color: var(--white);
+  cursor: pointer;
+  text-decoration: none;
+  color: var(--white);
 }
 
 .articleSrcLogo {
-    width: 70px;
-    height: auto;
-    position: absolute;
-    border-radius: 50%;
-    left: 35px;
-    top: 20px;
-    aspect-ratio: 1 / 1;
+  width: 70px;
+  height: auto;
+  position: absolute;
+  border-radius: 50%;
+  left: 35px;
+  top: 20px;
+  aspect-ratio: 1 / 1;
 }
 
 .image {
-    width:100%;
-    height: 430px;
+  width: 100%;
+  height: 300px;
+  aspect-ratio: 1;
 }
 
 .textContainer {
-    margin: 1rem;
+  margin: 1rem;
+  /* height: 50%; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .description {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    margin-bottom: 5rem;
-    min-height: 1rem;
+  display: -webkit-box !important;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  white-space: normal;
+  overflow: hidden;
+  margin-bottom: 5rem;
+  height: 6rem;
+  line-height: 2rem;
 }
 
-.title, .details {
-    font-weight: var(--font-weight-bold);
+.title,
+.details {
+  font-weight: var(--font-weight-bold);
 }
 
 .title {
-    min-height: 6rem;
+  display: -webkit-box !important;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  white-space: normal;
+  overflow: hidden;
+  min-height: 5rem;
 }
-
-
 
 /**
  * ----------------------------------------
  * animation articleCardHover
  * ----------------------------------------
  */
- @-webkit-keyframes articleCardHover {
-    0% {
-    }
-    100% {
-      outline: 2px solid var(--light-blue);
-    }
+@-webkit-keyframes articleCardHover {
+  0% {
   }
-  
-  @keyframes articleCardHover {
-    0% {
-    }
-    100% {
-        outline: 2px solid var(--light-blue);
-    }
+  100% {
+    outline: 2px solid var(--light-blue);
   }
+}
+
+@keyframes articleCardHover {
+  0% {
+  }
+  100% {
+    outline: 2px solid var(--light-blue);
+  }
+}
